# src/main/java/com/bank_example/product_service/domain/models/product/commands/TransferMoneyCommand.java
@@ -1,0 +1,13 @@
+package com.bank_example.product_service.domain.models.product.commands;
+
+import lombok.Data;
+
+import java.math.BigDecimal;
+
+@Data
+public class TransferMoneyCommand {
+
+    private BigDecimal amount;
+    private String productOriginId;
+    private String productDestId;
+}
