# src/main/java/com/bank_example/product_service/domain/usecases/TransferMoneyUseCase.java
@@ -1,0 +1,9 @@
+package com.bank_example.product_service.domain.usecases;
+
+import com.bank_example.product_service.domain.generate.model.TransferMoneyRequest;
+import reactor.core.publisher.Mono;
+
+public interface TransferMoneyUseCase {
+
+    Mono<Void> transferMoney(TransferMoneyRequest transferMoneyCommand);
+}
